fixed failing tests after api changes. Bumped to v 0.1.0
